library/general/haslimits/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: haslimits
tests:
- name: block-endpoint-default-role
  template: template.yaml
  constraint: samples/haslimits/constraint.yaml
  cases:
  - name: example-allowed
    object: samples/haslimits/example_allowed.yaml
    assertions:
    - violations: no
  - name: example-disallowed
    object: samples/haslimits/example_disallowed.yaml
    assertions:
    - violations: yes
